[tool.poetry]
name = "ma-am"
version = "0.1.0"
description = "Minimal agent-based wearable health assistant using LangChain and InfluxDB"
authors = ["stynoo <17745813+stynoo@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.82.1"
influxdb = "^5.3.2"
langchain = "^0.3.25"
langchain-core = "^0.3.63"
langchain-community = "^0.3.24"
langchain-openai = "^0.3.18"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.7"

[tool.poetry.scripts]
ma-am = "runner:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
